--- a/index.html
+++ b/index.html
@@ -35,23 +35,15 @@
     <h2>My Resume</h2>
     <h3>About Me</h3>
     <p>My name is Bulbul, I am a supervisor of MT-2001 group</p>
-    <p>I am in love with math and I wanna be a Data Analyst</p>
+    <p>I am in love with math and I wanna be a Data Analyst. I studied at comprehensive school which located in Taraz.</p>
   </div>
 
   <div class="projects container mt-4" id="projects">
     <h3>Projects</h3>
     <ul class="mt-3">
       <li>
-        <h4>Lorem, ipsum dolor.</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolores laudantium, ex earum odit soluta et assumenda facere, aliquid repellat cupiditate aut sit in blanditiis explicabo excepturi libero? Laborum, impedit.</p>
-      </li>
-      <li>
-        <h4>Lorem, ipsum dolor.</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illo qui deleniti nulla laudantium fuga, voluptatum dolorem voluptatem consequatur. Velit quas at qui magni vero recusandae nisi asperiores. Excepturi, ad.</p>
-      </li>
-      <li>
-        <h4>Lorem, ipsum dolor.</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus explicabo recusandae sed quis corrupti consequatur laudantium non quae cupiditate incidunt veritatis veniam cumque modi, eius neque. Fugit quisquam alias minima.</p>
+        <h4>Here link to my works</h4>
+        <p>https://drive.google.com/drive/folders/1Rt1-KV71WRGW5tmbhROPXCda1l3HB2MP?usp=sharing</p>
       </li>
     </ul>
   </div>
